Cleanup mixin