@@ -9,6 +9,6 @@ import java.util.List;
 public class HLocatorHead implements HookLocator {
 	@Override
 	public List<Integer> getLineNumber(InsnList insnNodes) {
-		return Arrays.asList(0);
+		return List.of(0);
 	}
 }
